# DistributedKeyValStore

./: .gitignore  CMakeLists.txt  HashMap  HashMap.cpp  README.md  build.sh  initial_data.txt  main  main.cpp
client/: CMakeLists.txt
client/include/: Config.h
client/src/: main.cpp
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/x86_64/: main.yml
proto/: CMakeLists.txt  hashmap.proto
server/: CMakeLists.txt
server/include/: Config.h  ConsistentHashing.h  HashMap.h  HashMapServiceImpl.h  IExecutor.h  PartitionedHashMap.h  RaftNode.h  Shards.h  StubManager.h
server/src/: HashMap.cpp  PartitionedHashMap.cpp  StubManager.cpp  main.cpp
src/: main.cpp
test/: CMakeLists.txt  testConsistentHashing.cpp  testRaftNode.cpp
